Features : Edit button now functioning. Fix : Some bugs in delete function now fixed. Comments added to code to ease readability

--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ input {
     float: left;
 }
 
+#spoiler{
+    display: none;
+}
+
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
     background-color: rgb(202, 87, 164);
